<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geo Picture Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="na">"not set \nclick to add"</string>
    <string name="title_activity_map_select">Setting Geo-data</string>
    <string name="anzeigen">Show Map</string>
    <string name="title_activity_anzeigen">Show map</string>
	<string name="bildnr">Picture number </string>
	<string name="taken">Picture taken on </string>
	<string name="day">7 days</string>
	<string name="month">6 month</string>
	<string name="year">1 year</string>
	<string name="all">all the time</string>
	<string name="choosetime">Choose the timeperiod of your images</string>
	<string name="from">Start date</string>
	<string name="to">End date</string>
	<string name="titledate">Choose timeperiod</string>
	<string name="ok">OK</string>
	<string name="abbruch">Cancel</string>
	<string name="vollbild">Chosen picture</string>
	<string name="importtext">Select pictures</string>
	<string name="zeit">Search by time</string>
	<string name="posi">Picture number </string>
	<string name="notsettext">The positions of the following pictures are not saved. Return to add information to these pictures. The other pictures can be found in the map.</string>
	<string name="titlenotset">Missing Geoinformation</string>
	<string name="shownotset">Show only pictures without geoinformation</string>
	<string name="textsuche">Place/Town</string>
	<string name="suchen">Search</string>
	<string name="suchetitel">You can mark a place by tapping in the map or searching for a name of it.</string>
	<string name="uebernehmen">Save coordinates and return</string>
	<string name="titwirklich">Save coordiantes to photo?</string>
	<string name="txtwirklich">Do you want to save the coordinates to the chosen picture? Current geoinformation saved to the picture will be overwritten and can not be restored from other apps! A backup for the last 3 GPS data will be stored for each picture locally on the device.</string>
	<string name="yeswirklich">Yes</string>
	<string name="nowirklich">No</string>
	<string name="rate">Thank you for downloading this app. \nIf you have any idea for improvement feel free to contact me via mail by using the left button. \n\nFurther, you could help me by giving me a good rating on google-play (google-plus account needed)</string>
	<string name="close">Close</string>
	<string name="titKon">Contact / Rating</string>
	<string name="wrongformat">The folder of the chosen picture does not support saving geo information.</string>
	<string name="MapTyp">Type of Map</string>
	<string name="Normal">Normal</string>
	<string name="Sat">Satellite</string>
	<string name="Hyb">Hybrid</string>
	<string name="navi">Chronological order</string>
	<string name="empty">No pictures chosen yet.</string>
	<string name="empty2">Loading..\nplease wait a few seconds</string>
	<string name="aktuelP">Saved position:\n</string>
	<string name="keine">Select old place</string>
	<string name="alte">Show old GPS-data</string>
	<string name="titsharepos">Share position to other pictures</string>
			<string name="sharepos">Choose pictures which were taken on the same place like the regarded picture (yellow marker on map)</string>
<string name="save">Save</string>
<string name="nointernet">No internet connection is available!</string>
<string name="sorry">Android doesn\'t allow the App to change this file. Only picture stored under the DCIM camera folder can be updated.</string>
<string name="writeerror">There was a problem and the new coordinates were not saved.</string>
<string name="tutorial">Introduction</string>
<string name="tuterkl">Click on the buttons to get an explanation of theire functions. To closing this introduction and going back to the normal surface of the app click on the questionmark again.</string>
<string name="helplupe">Select pictures on your phone / tablet depending on the capture date.</string>
<string name="helpmap">If you have selected pictures, this button will show you a map with theire positions on it.</string>
<string name="helpimage">This button allows you to select pictures from folders on your device per hand.</string>
<string name="helpcontact">Here you can contact the developer or rate this app on google play.</string>
<string name="helloTitel">Getting started..</string>
<string name="helloMess">To get an introduction, click on the questionmark on the top of this page</string>
</resources>
