<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="0sp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/choosetime"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">
        <Button 
            android:id="@+id/day"
            android:text="@string/day"
            android:layout_width="0dp"
            android:onClick="day"
            android:textSize="10sp"
            android:layout_margin="1sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button 
            android:id="@+id/month"
            android:text="@string/month"
            android:layout_width="0dp"
            android:layout_margin="1sp"
            android:onClick="month"
            android:textSize="10sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button 
            android:id="@+id/year"
            android:text="@string/year"
            android:layout_width="0dp"
             android:layout_margin="1sp"
            android:onClick="year"
            android:textSize="10sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button 
            android:id="@+id/all"
            android:text="@string/all"
            android:layout_width="0dp"
           android:layout_margin="1sp"
            android:onClick="alltime"
            android:textSize="10sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/from"/>
         <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/to"/>
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView 
        android:id="@+id/dat1"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/picker"
        android:clickable="true"
        android:onClick="dat"
        android:layout_margin="5sp"
        android:padding="3sp"
        />
       <TextView 
        android:id="@+id/dat2"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/picker"
        android:clickable="true"
        android:onClick="dat"
        android:layout_margin="5sp"
        android:padding="3sp"
        />
        
        
    </LinearLayout>

</LinearLayout>
