<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/dialogWidth"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10sp"
    android:layout_marginBottom="10sp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/notsettext"/>
<ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/piclist2"
        android:layout_weight="10"
        >
        
    </ListView>
        <TextView android:id="@+id/empty"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:text="@string/empty2"
        android:visibility="gone"
        android:gravity="center"
        android:textColor="#AAAAAA"/>
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abbruch"
        android:id="@+id/clos"/>

</LinearLayout>