<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.shuewe.picturemap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cont"
    android:orientation="vertical"
    tools:context="com.shuewe.picturemap.MapSelect" >
          <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>
       <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/container"
     >
     
 <TextView android:layout_alignParentTop="true"
     android:id="@+id/textsuche"
     android:layout_alignParentLeft="true"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/suchetitel"/>
 <EditText 
     android:id="@+id/editsuche"
     android:layout_below="@id/textsuche"
     android:layout_alignLeft="@id/textsuche"
     android:layout_width="200sp"
     android:hint="@string/textsuche"
     android:layout_height="wrap_content"/>
 <Button
     android:layout_toRightOf="@id/editsuche"
     android:layout_alignTop="@id/editsuche"
     android:text="@string/suchen"
     android:onClick="ortsuchen"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     />

<LinearLayout
    android:id="@+id/e"
    android:layout_alignParentBottom="true"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    >
     <Spinner 
                android:id="@+id/old"
        android:layout_width="250sp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"/>
    <CheckBox 
        android:id="@+id/alte"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:onClick="alte"
        android:text="@string/alte"
        android:checked="false"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/tview"
        android:layout_above="@id/e"
        android:layout_height="20sp"
        android:layout_width="wrap_content"
        />
 
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tview"
        android:layout_below="@id/editsuche"
        android:layout_marginTop="5dp" />

</RelativeLayout>
</LinearLayout>
